ci: ensure package installed (editable) so warmup_numba can import cenop in CI

--- a/.github/workflows/nightly-perf.yml
+++ b/.github/workflows/nightly-perf.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r cenop/requirements.txt
+          python -m pip install -e ./cenop
 
       - name: Warmup Numba (pre-compile)
         run: |
